--- a/.github/workflows/rss-dockershelf.yml
+++ b/.github/workflows/rss-dockershelf.yml
@@ -72,15 +72,15 @@ jobs:
           status-text: '${{ steps.vars.outputs.title }}: A new version of #dockershelf has been released! ${{ steps.vars.outputs.link }}'
           status-image-url-1: https://user-images.githubusercontent.com/324683/95548254-ae7ad600-09d2-11eb-87c2-82f6dc65bb32.png
 
-      - name: Posting to LinkedIn /in/martinezfaneyth
-        uses: LuisAlejandro/agoras-actions@1.1.3
-        if: steps.vars.outputs.publish == 'yes'
-        with:
-          network: linkedin
-          action: post
-          linkedin-access-token: ${{ secrets.LA_LINKEDIN_ACCESS_TOKEN }}
-          status-text: '${{ steps.vars.outputs.title }}: A new version of #dockershelf has been released! ${{ steps.vars.outputs.link }}'
-          status-image-url-1: https://user-images.githubusercontent.com/324683/95548254-ae7ad600-09d2-11eb-87c2-82f6dc65bb32.png
+      # - name: Posting to LinkedIn /in/martinezfaneyth
+      #   uses: LuisAlejandro/agoras-actions@1.1.3
+      #   if: steps.vars.outputs.publish == 'yes'
+      #   with:
+      #     network: linkedin
+      #     action: post
+      #     linkedin-access-token: ${{ secrets.LA_LINKEDIN_ACCESS_TOKEN }}
+      #     status-text: '${{ steps.vars.outputs.title }}: A new version of #dockershelf has been released! ${{ steps.vars.outputs.link }}'
+      #     status-image-url-1: https://user-images.githubusercontent.com/324683/95548254-ae7ad600-09d2-11eb-87c2-82f6dc65bb32.png
 
       - name: Posting to Instagram @LuisDevelops
         uses: LuisAlejandro/agoras-actions@1.1.3
